完成9.1每日一题

--- a/题解.md
+++ b/题解.md
@@ -122,6 +122,8 @@ LCP 13 寻宝
 
 5500 乘积为正数的最长子数组长度
 
+486 预测赢家
+
 ## 四. 双指针
 
 19 删除链表的倒数第N个结点
@@ -7139,5 +7141,40 @@ class Solution {
         return true;
     }
 }
+```
+
+### 486 预测赢家
+
+方法一： 动态规划
+
+`dp[i][j]` 表示在i-j范围内先手可以获得的最大分数
+
+时间复杂度：O(n^2)
+
+空间复杂度：O(n^2)
+
+```java
+class Solution {
+    public boolean PredictTheWinner(int[] nums) {
+        int n = nums.length;
+        int[][] dp = new int[n][n];
+        int[][] sum = new int[n][n];
+        for (int i = n-1; i >= 0; i--) {
+            for (int j = n-1; j >= i; j--) {
+                if (j == i) sum[i][j] = nums[i];
+                if (j > i) sum[i][j] = sum[i+1][j] + nums[i];
+            }
+        }
+        for (int i = n-1; i >= 0; i--) {
+            for (int j = i; j < n; j++) {
+                if (j == i) dp[i][j] = nums[i];
+                if (j > i) dp[i][j] = sum[i][j] - Math.min(dp[i+1][j], dp[i][j-1]);
+            }
+        }
+        if (dp[0][n-1] >= sum[0][n-1] - dp[0][n-1]) return true;
+        return false;
+    }
+}
+
 ```
 
