完成每日一题和988

--- a/题解.md
+++ b/题解.md
@@ -56,6 +56,8 @@
 
 51 N皇后
 
+988 从叶结点开始的最小字符串
+
 ## 二. 树/链表
 
 2 两数相
@@ -7397,6 +7399,63 @@ class Solution {
                 if (square[x+i][y-i] == originValue) square[x+i][y-i] = -setValue;
             }
         }
+    }
+}
+
+```
+
+### 988 从叶结点开始的最小字符串
+
+方法一：回溯
+
+时间复杂度：O(n^2)
+
+空间复杂度：O(n)
+
+
+```java
+class Solution {
+    TreeNode up;
+    public String smallestFromLeaf(TreeNode root) {
+        up = root;
+        StringBuffer ans = new StringBuffer();
+        StringBuffer tmp = new StringBuffer();
+        backTrack(root, tmp, ans);
+        return ans.toString();
+    }
+    public void backTrack(TreeNode root, StringBuffer tmp, StringBuffer ans) {
+        if (root == null) return;
+        tmp.append((char)(root.val + 'a'));
+        if (root.left == null && root.right == null) {
+            if (compare(tmp.reverse(), ans) < 0) {
+                ans.delete(0, ans.length());
+                ans.append(tmp.toString());
+            }
+            tmp.reverse();
+            tmp.delete(tmp.length()-1, tmp.length());
+            return;
+        }
+        backTrack(root.left, tmp, ans);
+        backTrack(root.right, tmp, ans);
+        tmp.delete(tmp.length()-1, tmp.length());
+    }
+    public int compare(StringBuffer a, StringBuffer b) {
+        if (a.length() == 0 && b.length() == 0) return 0;
+        if (a.length() == 0) return 1;
+        if (b.length() == 0) return -1;
+        int i = 0;
+        while (i < a.length() && i < b.length()) {
+            if (a.charAt(i) == b.charAt(i)) {
+                i++;
+            } else if (a.charAt(i) > b.charAt(i)) {
+                return 1;
+            } else {
+                return -1;
+            }
+        }
+        if (i == a.length() && i == b.length()) return 0;
+        if (i == a.length()) return -1;
+        return 1;
     }
 }
 
