--- a/题解.md
+++ b/题解.md
@@ -58,6 +58,8 @@
 
 988 从叶结点开始的最小字符串
 
+60 第k个排列
+
 ## 二. 树/链表
 
 2 两数相
@@ -7451,6 +7453,53 @@ class Solution {
         if (i == a.length() && i == b.length()) return 0;
         if (i == a.length()) return -1;
         return 1;
+    }
+}
+
+```
+
+### 60 第k个排列
+
+方法一：确定每个位置上的数字应该是多少，利用递归，分解子问题。这里注意需要知道y可以分解成多少个x加上一个数b，其中b不为0。
+
+`k = (y - 1) / x`, `b = (y - 1) % x + 1`;
+ 
+时间复杂度：O(n^2)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    StringBuffer sb = new StringBuffer();
+    HashMap<Integer, Integer> map = new HashMap<>();
+    int[] factorial;
+    public String getPermutation(int n, int k) {
+        factorial = new int[n+1];
+        factorial[0] = 1;
+        for (int i = 1; i <= n; i++) {
+            map.put(i, 1);
+            factorial[i] = factorial[i-1] * i;
+        }
+        helper(n, k);
+        return sb.toString();
+    }
+
+    public void helper(int n, int k) {
+        if (n == 0) return;
+        int length = map.size();
+        int subFact = factorial[n-1];
+        int first = (k-1) / subFact + 1;
+        int rest = (k-1) % subFact + 1;
+        for (int i = 1; i <= length; i++) {
+            if (map.get(i) == 1) {
+                first--;
+                if (first == 0) {
+                    sb.append((char)(i+'0'));
+                    map.put(i, 0);
+                }
+            } 
+        }
+        helper(n-1, rest);
     }
 }
 
