完成09.06每日一题

--- a/题解.md
+++ b/题解.md
@@ -60,6 +60,12 @@
 
 60 第k个排列
 
+5491 矩阵对角线元素的和
+
+5492 分割字符串的方案数
+
+5493 删除最短的子数组使剩余数组有序
+
 ## 二. 树/链表
 
 2 两数相
@@ -89,6 +95,8 @@
 337 打家劫社II
 
 1569 将子数组重新排序得到同一个二叉查找树的方案数
+
+107 二叉树的层序遍历II
 
 ## 三. 动态规划
 
@@ -7500,6 +7508,156 @@ class Solution {
             } 
         }
         helper(n-1, rest);
+    }
+}
+
+```
+
+### 5491. 矩阵对角线元素的和
+
+方法一：遍历
+
+时间复杂度：O(n)
+
+空间复杂度：O(1)
+
+```java
+class Solution {
+    public int diagonalSum(int[][] mat) {
+        int n = mat.length;
+        int ans = 0;
+        for (int i = 0; i < n; i++) {
+            ans += mat[i][i];
+            ans += mat[i][n-1-i];
+        }
+        if (n % 2 == 1) ans -= mat[n/2][n/2];
+        return ans;
+    }
+}
+
+```
+
+### 5492 分割字符串的方案数
+
+方法一：排列组合知识，找到相邻部分中间空了多少个0。
+
+时间复杂度：O(n)
+
+空间复杂度：O(1)
+
+```java
+import java.math.BigInteger;
+class Solution {
+    public int numWays(String s) {
+        int num1 = 0;
+        for (int i = 0; i < s.length(); i++) {
+            if (s.charAt(i) == '1') num1++;
+        }
+        if (num1 % 3 != 0) return 0;
+        int mod = (int)(1e9 + 7);
+        if (num1 == 0) return BigInteger.valueOf((s.length() - 1)).multiply(BigInteger.valueOf(s.length() - 2)).divide(BigInteger.valueOf(2)).mod(BigInteger.valueOf(mod)).intValue();
+        int[] tmp = new int[4];
+        int sub = 0;
+        int i = 0, k = 0;
+        while (i < s.length()) {
+            while (sub < num1 / 3) {
+                if (s.charAt(i) == '1') {
+                    sub++;
+                }
+                i++;
+            }
+            tmp[k++] = i;
+            while (s.charAt(i) == '0') {
+                i++;
+            }
+            tmp[k++] = i-1;
+            if (k == 4) break;
+            sub = 0;
+        }
+        return BigInteger.valueOf(tmp[1] - tmp[0] + 2).multiply(BigInteger.valueOf(tmp[3] - tmp[2] + 2)).mod(BigInteger.valueOf(mod)).intValue();
+    }
+}
+
+```
+
+### 5493 删除最短的子数组使剩余数组有序
+
+方法一：找到第一个不减区间的起始firstStart 和 firstEnd ，找到最后一个不减区间的起始endStart和endEnd，分四种情况讨论：只保留左边，只保留右边，保留左边一部分，保留右边一部分。
+
+```java
+class Solution {
+    public int findLengthOfShortestSubarray(int[] arr) {
+        int firstStart = 0;
+        int firstEnd = 0;
+        int i = 0;
+        while (i + 1 < arr.length && arr[i+1] >= arr[i]) i++;
+        firstEnd = i;
+        if (firstEnd == arr.length - 1) return 0;
+        while (i + 1 < arr.length && arr[i+1] < arr[i]) i++;
+        int endStart = i;
+        int endEnd = i;
+        while (i + 1 < arr.length) {
+            endStart = i;
+            while (i+1 < arr.length && arr[i+1] >= arr[i]) i++;
+            endEnd = i;
+            while (i+1 < arr.length && arr[i+1] < arr[i]) {
+                i++;
+                endStart = i;
+                endEnd = i;
+            }
+        }
+        int ans = Math.min(arr.length-(firstEnd - firstStart + 1), arr.length - (endEnd - endStart + 1));
+        i = firstEnd;
+        while (i >= 0 && arr[i] > arr[endStart]) {
+            i--;
+        }
+        ans = Math.min(ans, arr.length - (endEnd - endStart + 1) - (i - firstStart + 1));
+        i = endStart;
+        while (i < arr.length && arr[firstEnd] > arr[i]) {
+            i++;
+        }
+        ans = Math.min(ans, arr.length - (firstEnd - firstStart + 1) - (endEnd - i + 1));
+        return ans;
+    }
+}
+
+```
+
+### 107 二叉树的层序遍历
+
+方法一：队列
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    public List<List<Integer>> levelOrderBottom(TreeNode root) {
+        List<List<Integer>> ans = new LinkedList<>();
+        Queue<TreeNode> queue = new LinkedList<>();
+        queue.offer(root);
+        int k = 1;
+        while (queue.size() != 0) {
+            int num = 0;
+            List<Integer> tmpList = new LinkedList<>();
+            while (k != 0) {
+                TreeNode tmp = queue.poll();
+                tmpList.add(tmp.val);
+                if (tmp.left != null) {
+                    queue.offer(tmp.left);
+                    num++;
+                }
+                if (tmp.right != null) {
+                    queue.offer(tmp.right);
+                    num++;
+                }
+                k--;
+            }
+            k = num;
+            ans.insert(0, tmpList);
+        }
+        return ans;
     }
 }
 
