--- a/题解.md
+++ b/题解.md
@@ -66,6 +66,8 @@
 
 5493 删除最短的子数组使剩余数组有序
 
+5494 统计所有可行路径
+
 ## 二. 树/链表
 
 2 两数相
@@ -141,6 +143,8 @@ LCP 13 寻宝
 5500 乘积为正数的最长子数组长度
 
 486 预测赢家
+
+5494 统计所有可行路径
 
 ## 四. 双指针
 
@@ -7658,6 +7662,64 @@ class Solution {
             ans.insert(0, tmpList);
         }
         return ans;
+    }
+}
+
+```
+
+### 5494 统计所有可行路径
+
+方法一：递归+memo
+
+时间复杂度：O(n^4)
+
+空间复杂度：O(n^3)
+
+```java
+class Solution {
+    int[][] dist;
+    int[][][] memo;
+    int n;
+    int mod = (int)(1e9+7);
+    public int countRoutes(int[] locations, int start, int finish, int fuel) {
+        n = locations.length;
+        dist = new int[n][n];
+        memo = new int[n][n][fuel+1];
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                dist[i][j] = Math.abs(locations[i] - locations[j]);
+            }
+        }
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                for (int k = 0; k <= fuel; k++) {
+                    memo[i][j][k] = -1;
+                }
+            }
+        }
+        return helper(start, finish, fuel);
+    }
+    public int helper(int s, int t, int fuel) {
+        if (memo[s][t][fuel] != -1) return memo[s][t][fuel];
+        if (fuel == 0) {
+            if (s == t) {
+                memo[s][t][fuel] = 1;
+                return 1;
+            } else {
+                memo[s][t][fuel] = 0;
+                return 0;
+            }
+        } 
+        int ret = 0;
+        if (s == t) ret++;
+        for (int i = 0; i < n; i++) {
+            if (fuel >= dist[s][i] && i != s) {
+                ret += helper(i, t, fuel-dist[s][i]);
+                ret = ret % mod;
+            }
+        }
+        memo[s][t][fuel] = ret;
+        return ret;
     }
 }
 
