--- a/题解.md
+++ b/题解.md
@@ -7669,9 +7669,9 @@ class Solution {
 
 ### 5494 统计所有可行路径
 
-方法一：递归+memo
+方法一：递归+memo，这里我的解法稍微复杂了些，memo[s][t][f]表示油量为f的前提下，s到t的路线个数。但其实可以简化为memo[s][f]表示在油量为f的前提下，到终点的路线个数。
 
-时间复杂度：O(n^4)
+时间复杂度：O(n^2 * fuel)
 
 空间复杂度：O(n^3)
 
@@ -7701,15 +7701,6 @@ class Solution {
     }
     public int helper(int s, int t, int fuel) {
         if (memo[s][t][fuel] != -1) return memo[s][t][fuel];
-        if (fuel == 0) {
-            if (s == t) {
-                memo[s][t][fuel] = 1;
-                return 1;
-            } else {
-                memo[s][t][fuel] = 0;
-                return 0;
-            }
-        } 
         int ret = 0;
         if (s == t) ret++;
         for (int i = 0; i < n; i++) {
