--- a/题解.md
+++ b/题解.md
@@ -178,6 +178,8 @@ LCP 13 寻宝
 
 104 二叉树的最大深度
 
+347 前K个高频元素
+
 ## 六. 图
 
 62 不同路径
@@ -7714,4 +7716,54 @@ class Solution {
     }
 }
 
+```
+
+### 347 前K个高频元素
+
+方法一：hash，建立一个新的类Node保存每个元素的值和出现的次数，然后使用最大堆。其中需要注意的是java中建立某个对象最大堆的方法，需要使用`PriorityQueue`然后还要给定比较大小的方法。
+
+时间复杂度：O(K*logn)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    HashMap<Integer, Integer> map = new HashMap<>();
+    class Node {
+        int value;
+        int number;
+        Node(int value, int number) {
+            this.value = value;
+            this.number = number;
+        }
+    }
+    static Comparator<Node> cNode = new Comparator<>() {
+        public int compare(Node p1, Node p2) {
+            return p2.number - p1.number;
+        }
+    }; 
+    public int[] topKFrequent(int[] nums, int k) {
+        for (int i = 0; i < nums.length; i++) {
+            if (!map.containsKey(nums[i])) {
+                map.put(nums[i], 1);
+            } else {
+                map.put(nums[i], map.get(nums[i])+1);
+            }
+        }
+        Node[] nodes = new Node[map.size()];
+        Set<Integer> keys = map.keySet();
+        PriorityQueue<Node> heap = new PriorityQueue<>(cNode);
+        int j = 0;
+        for (Integer key: keys) {
+            nodes[j] = new Node(key, map.get(key));
+            heap.offer(nodes[j]);
+            j++;
+        }
+        int[] ans = new int[k];
+        for (int i = 0; i < k; i++) {
+            ans[i] = heap.poll().value;
+        }
+        return ans;
+    }
+}
 ```
