--- a/题解.md
+++ b/题解.md
@@ -68,6 +68,8 @@
 
 5494 统计所有可行路径
 
+77 组合
+
 ## 二. 树/链表
 
 2 两数相
@@ -7766,4 +7768,35 @@ class Solution {
         return ans;
     }
 }
+```
+
+### 77 组合
+
+方法一：回溯
+
+时间复杂度：$O(C_n^k * k)$
+
+空间复杂度：O(K)
+
+```java
+class Solution {
+    List<List<Integer>> ans = new LinkedList<>();
+    public List<List<Integer>> combine(int n, int k) {
+        List<Integer> curr = new LinkedList<>();
+        backTrack(curr, 1, n, k);
+        return ans;
+    }
+    public void backTrack(List<Integer> curr, int start, int end, int k) {
+        if (k == 0) {
+            ans.add(new LinkedList<Integer>(curr));
+            return;
+        };
+        for (int i = start; i <= end - k + 1; i++) {
+            curr.add(i);
+            backTrack(curr, i+1, end, k-1);
+            curr.remove(curr.size()-1);
+        }
+    }
+}
+
 ```
