--- a/题解.md
+++ b/题解.md
@@ -48,6 +48,8 @@
 
 40 组合总和II
 
+216 组合总和III
+
 657 机器人能否返回原点
 
 557 反转字符串中的单词III
@@ -7799,4 +7801,63 @@ class Solution {
     }
 }
 
+```
+
+### 216 组合总和III
+
+方法一：回溯, M为集合大小，这里面为9。
+
+时间复杂度：O(M*2^M)
+
+空间复杂度：O(M)
+
+```java
+class Solution {
+    List<List<Integer>> ans = new LinkedList<>();
+    List<Integer> curr = new LinkedList<>();
+    public List<List<Integer>> combinationSum3(int k, int n) {
+        backTrack(1, n, k);
+        return ans;
+    }
+    public void backTrack(int p, int n, int numLeft) {
+        if (numLeft == 0 && n == 0) {
+            ans.add(new LinkedList<>(curr));
+            return;
+        }
+        if ((n == 0 && numLeft != 0) || (n != 0 && numLeft == 0)) {
+            return;
+        }
+        for (int i = p; i <= 9; i++) {
+            curr.add(i);
+            backTrack(i+1, n-i, numLeft-1);
+            curr.remove(curr.size()-1);
+        }
+    }
+}
+
+```
+
+回溯写法二：在每个位置选或者不选
+
+```java
+class Solution {
+    List<List<Integer>> ans = new LinkedList<>();
+    List<Integer> curr = new LinkedList<>();
+    public List<List<Integer>> combinationSum3(int k, int n) {
+        backTrack(1, n, k);
+        return ans;
+    }
+    public void backTrack(int p, int n, int numLeft) {
+        if (n == 0 && numLeft == 0) {
+            ans.add(new LinkedList<>(curr));
+            return;
+        }
+        if (n <= 0 || numLeft <= 0) return;
+        if (p > 9) return;
+        backTrack(p+1, n, numLeft);
+        curr.add(p);
+        backTrack(p+1, n-p, numLeft-1);
+        curr.remove(curr.size()-1);
+    }
+}
 ```
