--- a/题解.md
+++ b/题解.md
@@ -72,6 +72,10 @@
 
 77 组合
 
+1576 替换所有的问号
+
+LCP18 早餐组合 
+
 ## 二. 树/链表
 
 2 两数相
@@ -103,6 +107,8 @@
 1569 将子数组重新排序得到同一个二叉查找树的方案数
 
 107 二叉树的层序遍历II
+
+637 二叉树的层平均值
 
 ## 三. 动态规划
 
@@ -149,6 +155,8 @@ LCP 13 寻宝
 486 预测赢家
 
 5494 统计所有可行路径
+
+377 组合总和IV
 
 ## 四. 双指针
 
@@ -7861,3 +7869,207 @@ class Solution {
     }
 }
 ```
+
+### 1576 替换所有的问号
+
+方法一：数学
+
+时间复杂度：O(N)
+
+空间复杂度：O(N)
+
+```java
+class Solution {
+    public String modifyString(String s) {
+        StringBuffer sb = new StringBuffer();
+        for (int i = 0; i < s.length(); i++) {
+            char left = '.', right = '.';
+            if (s.charAt(i) != '?') {
+                sb.append(s.charAt(i));
+            } else {
+                if (i-1 >= 0) left = sb.charAt(i-1);
+                if (i+1 < s.length()) right = s.charAt(i+1);
+                for (char j = 'a'; j <= 'z';j++) {
+                    if (j != left && j != right) {
+                        sb.append(j);
+                        break;
+                    }
+                }
+            }
+        }
+        return sb.toString();
+    }
+}
+
+
+```
+
+### 637 二叉树的层平均值
+
+方法一：BFS，记录每一层的元素个数。
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    public List<Double> averageOfLevels(TreeNode root) {
+        Queue<TreeNode> queue = new LinkedList<>();
+        List<Double> ans = new LinkedList<>();
+        if (root == null) return ans;
+        int currLayerNum = 1;
+        double currLayerSum = 0;
+        int nextLayerNum = 0;
+        int numCount = 0;
+        queue.offer(root);
+        while (currLayerNum != 0) {
+            currLayerNum--;
+            numCount++;
+            TreeNode tmp = queue.poll();
+            currLayerSum += tmp.val;
+            if (tmp.left != null) {
+                queue.offer(tmp.left);
+                nextLayerNum++;
+            }
+            if (tmp.right != null) {
+                queue.offer(tmp.right);
+                nextLayerNum++;
+            }
+            if (currLayerNum == 0) {
+                currLayerNum = nextLayerNum;
+                ans.add(currLayerSum / numCount);
+                numCount = 0;
+                nextLayerNum = 0;
+                currLayerSum = 0;
+            }
+        }
+        return ans;
+    }
+}
+
+```
+
+方法二：DFs，记录一个cnts,sums两个数组分别保存每一层的节点个数和val值之和。
+
+时间，空间复杂度同上
+
+```java
+class Solution {
+    List<Double> ans = new LinkedList<>();
+    List<Integer> cnts = new LinkedList<>();
+    List<Double> sums = new LinkedList<>();
+    public List<Double> averageOfLevels(TreeNode root) {
+        dfs(root, 1);
+        for (int i = 0; i < cnts.size(); i++) {
+            ans.add(sums.get(i) / cnts.get(i));
+        }
+        return ans;
+    }
+    public void dfs(TreeNode curr, int layer) {
+        if (curr == null) return;
+        if (cnts.size() < layer) {
+            cnts.add(1);
+            sums.add((double)curr.val);
+        } else {
+            cnts.set(layer-1, cnts.get(layer-1)+1);
+            sums.set(layer-1, sums.get(layer-1)+curr.val);
+        }
+        dfs(curr.left, layer+1);
+        dfs(curr.right, layer+1);
+    }
+}
+```
+
+### 377 组合总和IV
+
+方法一：回溯（递归），这里其实不用回溯，直接递归，因为不需要再改变什么值。(超时)
+
+时间复杂度：
+
+空间复杂度：
+
+
+```java
+class Solution {
+    int sum = 0;
+    public int combinationSum4(int[] nums, int target) {
+        backTrack(0, nums, target);
+        return sum;
+    }
+    public void backTrack(int k, int[] nums, int target) {
+        if (target == 0) {
+            sum++;
+            return;
+        } 
+        if (target < 0) return;
+        for (int i = k; i < nums.length; i++) {
+            backTrack(0, nums, target-nums[i]);
+        }
+
+    }
+}
+
+```
+
+### LCP17 速算机器人 
+
+方法一：数学
+
+时间复杂度：O(n)
+
+空间复杂度：O(1)
+
+```java
+class Solution {
+    public int calculate(String s) {
+        int x = 1, y = 0;
+        for (int i = 0; i < s.length(); i++) {
+            if (s.charAt(i) == 'A') {
+                x = 2*x+y;
+            } else {
+                y = 2*y+x;
+            }
+        }
+        return x+y;
+    }
+}
+
+```
+
+### LCP18 秋叶收藏集
+
+方法一：双指针
+
+时间复杂度：O(n^2)
+
+空间复杂度：O(n^2)
+
+```java
+import java.math.BigInteger;
+class Solution {
+    public int breakfastNumber(int[] staple, int[] drinks, int x) {
+        int m = staple.length;
+        int n = drinks.length;
+        int mod = (int)1e9 + 7;
+        Arrays.sort(staple);
+        Arrays.sort(drinks);
+        BigInteger ans = BigInteger.valueOf(0);
+        int j = n-1;
+        for (int i = 0; i < m; i++) {
+            if (j < 0) break;
+            if (staple[i] > x) break;
+            while (j >= 0 && staple[i] + drinks[j] > x) {
+                j--;
+            }
+            if (j >= 0) ans = ans.add(BigInteger.valueOf(j+1)).mod(BigInteger.valueOf(mod));
+        }
+        return ans.intValue();
+    }
+}
+
+```
+
+方法二：二分查找 todo
+
+
