--- a/题解.md
+++ b/题解.md
@@ -212,6 +212,8 @@ LCP 13 寻宝
 
 5501 使陆地分离的最少天数
 
+79 单词搜索
+
 ## 七. 分治
 
 35 搜索插入位置
@@ -7985,9 +7987,9 @@ class Solution {
 
 方法一：回溯（递归），这里其实不用回溯，直接递归，因为不需要再改变什么值。(超时)
 
-时间复杂度：
+时间复杂度：O(n^target) (n 是 nums个数)
 
-空间复杂度：
+空间复杂度：O(target)
 
 
 ```java
@@ -8007,6 +8009,33 @@ class Solution {
             backTrack(0, nums, target-nums[i]);
         }
 
+    }
+}
+
+```
+
+方法二：递归+memo
+
+时间复杂度：O(target)
+
+空间复杂度：O(target)
+
+```java
+class Solution {
+    public int combinationSum4(int[] nums, int target) {
+        int[] memo = new int[target+1];
+        Arrays.fill(memo, -1);
+        return helper(nums, target, memo);
+    }
+    public int helper(int[] nums, int target, int[] memo) {
+        if (target == 0) return 1;
+        if (memo[target] != -1) return memo[target];
+        int ret = 0;
+        for (int i = 0; i < nums.length; i++) {
+            if(target >= nums[i]) ret += helper(nums, target - nums[i], memo);
+        }
+        memo[target] = ret;
+        return ret;
     }
 }
 
@@ -8070,6 +8099,154 @@ class Solution {
 
 ```
 
-方法二：二分查找 todo
+方法二：二分查找
+
+时间复杂度：
+
+空间复杂度：
+
+```java
+class Solution {
+    public int breakfastNumber(int[] staple, int[] drinks, int x) {
+        int m = staple.length;
+        int n = drinks.length;
+        int mod = (int)1e9 + 7;
+        Arrays.sort(staple);
+        Arrays.sort(drinks);
+        int ans = 0;
+        int j = n-1;
+        for (int i = 0; i < m; i++) {
+            if (j < 0) break;
+            if (staple[i] > x) break;
+            int index = find(drinks, 0, j, x - staple[i]);
+            j = index - 1;
+            if (j >= 0) ans = (ans + j + 1) % mod;
+        }
+        return ans;
+    }
+    public int find(int[] drinks, int i, int j, int left) {
+        // 找到drinks在i,j中第一个大于left的索引。
+        if (drinks[j] <= left) return j+1;
+        if (drinks[i] > left) return i;
+        int middle = (i + j) / 2;
+        if (drinks[middle] <= left) return find(drinks, middle+1, j, left);
+        return find(drinks, i, middle, left);
+    }
+}
+
+```
+
+
+### 79 单词搜索
+
+方法一：dfs回溯, L为字符串长度
+
+时间复杂度：$O(mn3^L)$
+
+空间复杂度：$O(mn)$
+
+```java
+class Solution {
+    int[] dx = {-1, 1, 0, 0};
+    int[] dy = {0, 0, -1, 1};
+    int m, n;
+    public boolean exist(char[][] board, String word) {
+        m = board.length;
+        n = board[0].length;
+        int[][] isVisited = new int[m][n];
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (board[i][j] == word.charAt(0)) {
+                    if (dfs(board, word, i, j, 1, isVisited)) return true;
+                }
+            }
+        }
+        return false;
+    } 
+    public boolean dfs(char[][] board, String word, int x, int y, int k, int[][] isVisited) {
+        if (k >= word.length()) return true;
+        isVisited[x][y] = 1;
+        for (int i = 0; i < 4; i++) {
+            int newX = x + dx[i];
+            int newY = y + dy[i];
+            if (newX >= 0 && newX < m && newY >= 0 && newY < n && isVisited[newX][newY] == 0) {
+                if (board[newX][newY] == word.charAt(k)) {
+                    if (dfs(board, word, newX, newY, k+1, isVisited)) return true;
+                }
+            }
+        }
+        isVisited[x][y] = 0;
+        return false;
+    }  
+}
+
+```
+
+
+```java
+class Solution {
+    List<Character> leaf = new LinkedList<>();
+    List<Integer> num = new LinkedList<>();
+    public int minimumOperations(String leaves) {
+        int i = 0;
+        int n = leaves.length();
+        while (i < n) {
+            int cnt = 0;
+            if (leaves.charAt(i) == 'r') {
+                while (i < n && leaves.charAt(i) == 'r') {
+                    i++;
+                    cnt++;
+                }
+                leaf.add('r');
+                num.add(cnt);
+            } else {
+                while (i < n && leaves.charAt(i) == 'y') {
+                    i++;
+                    cnt++;
+                }
+                leaf.add('y');
+                num.add(cnt);
+            }
+        }
+        if (check(leaf)) return 0;
+        int ans = 0;
+        if (leaf.get(0) != 'r') {
+            leaf.add(0, 'r');
+            num.add(0, 1);
+            num.set(1, num.get(1)-1);
+            ans++;
+        }
+        if (leaf.get(leaf.size()-1) != 'r') {
+            leaf.add('r');
+            num.add(1);
+            num.set(leaf.size()-2, num.get(leaf.size()-2)-1);
+            ans++;
+        }
+        int yNum = 0, rNum = 0;
+        int yMax = 0;
+        for (int j = 1; j < leaf.size()-1; j++) {
+            if (leaf.get(j) == 'y') {
+                yNum += num.get(j);
+                yMax = Math.max(yMax, num.get(j));
+            } else {
+                rNum += num.get(j);
+            }
+        }
+        if (yNum == 0) {
+            ans += rNum;
+        }else {
+            ans += Math.min(rNum, yNum - yMax);
+        }
+        return ans;
+    }
+    public boolean check(List<Character> leaf) {
+        if (leaf.size() == 3) {
+            if (leaf.get(0) == 'r' && leaf.get(1) == 'y' && leaf.get(2) == 'r') return true;
+        }
+        return false;
+    }   
+}
+
+```
 
 
