--- a/题解.md
+++ b/题解.md
@@ -158,6 +158,8 @@ LCP 13 寻宝
 
 377 组合总和IV
 
+LCP19 秋叶收藏集
+
 ## 四. 双指针
 
 19 删除链表的倒数第N个结点
@@ -8182,71 +8184,39 @@ class Solution {
 
 ```
 
+### LCP19 秋叶收藏集
+
+方法一：DP
+
+三个状态`dp[i][0], dp[i][1], dp[i][2]`, `dp[i][0]`表示将前i个位置（包含第i）的字符全变为r的最小操作次数，`dp[i][1]`表示将前i位置变为ry这种形式的最小操作次数，`dp[i][2]`表示将前i个位置变成ryr这种形式的最小操作次数。
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
 
 ```java
 class Solution {
-    List<Character> leaf = new LinkedList<>();
-    List<Integer> num = new LinkedList<>();
     public int minimumOperations(String leaves) {
-        int i = 0;
         int n = leaves.length();
-        while (i < n) {
-            int cnt = 0;
-            if (leaves.charAt(i) == 'r') {
-                while (i < n && leaves.charAt(i) == 'r') {
-                    i++;
-                    cnt++;
-                }
-                leaf.add('r');
-                num.add(cnt);
-            } else {
-                while (i < n && leaves.charAt(i) == 'y') {
-                    i++;
-                    cnt++;
-                }
-                leaf.add('y');
-                num.add(cnt);
-            }
+        int[][] dp = new int[n][3];
+        dp[0][0] = (leaves.charAt(0) == 'r')?0: 1;
+        dp[0][1] = (int)1e5;
+        dp[0][2] = (int)1e5;
+        for (int i = 1; i < n; i++) {
+            char c = leaves.charAt(i);
+            dp[i][0] = dp[i-1][0] + cost(c, 'r');
+            dp[i][1] = Math.min(dp[i-1][0], dp[i-1][1]) + cost(c, 'y');
+            dp[i][2] = Math.min(dp[i-1][1], dp[i-1][2]) + cost(c, 'r');
         }
-        if (check(leaf)) return 0;
-        int ans = 0;
-        if (leaf.get(0) != 'r') {
-            leaf.add(0, 'r');
-            num.add(0, 1);
-            num.set(1, num.get(1)-1);
-            ans++;
-        }
-        if (leaf.get(leaf.size()-1) != 'r') {
-            leaf.add('r');
-            num.add(1);
-            num.set(leaf.size()-2, num.get(leaf.size()-2)-1);
-            ans++;
-        }
-        int yNum = 0, rNum = 0;
-        int yMax = 0;
-        for (int j = 1; j < leaf.size()-1; j++) {
-            if (leaf.get(j) == 'y') {
-                yNum += num.get(j);
-                yMax = Math.max(yMax, num.get(j));
-            } else {
-                rNum += num.get(j);
-            }
-        }
-        if (yNum == 0) {
-            ans += rNum;
-        }else {
-            ans += Math.min(rNum, yNum - yMax);
-        }
-        return ans;
+        return dp[n-1][2];
     }
-    public boolean check(List<Character> leaf) {
-        if (leaf.size() == 3) {
-            if (leaf.get(0) == 'r' && leaf.get(1) == 'y' && leaf.get(2) == 'r') return true;
-        }
-        return false;
-    }   
+    public int cost(char a, char b) {
+        return (a == b)?0:1;
+    }
 }
-
 ```
+
+方法二：递归+memo，与DP十分相似
+
 
 
