--- a/题解.md
+++ b/题解.md
@@ -110,6 +110,8 @@ LCP18 早餐组合
 
 637 二叉树的层平均值
 
+226 翻转二叉树
+
 ## 三. 动态规划
 
 5 最长回文子串
@@ -8217,6 +8219,32 @@ class Solution {
 ```
 
 方法二：递归+memo，与DP十分相似
+
+### 226 翻转二叉树
+
+方法一：递归
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        helper(root);
+        return root; 
+    }
+    public void helper(TreeNode root) {
+        if (root == null) return;
+        TreeNode tmp = root.right;
+        root.right = root.left;
+        root.left = tmp;
+        helper(root.left);
+        helper(root.right);
+    }
+}
+
+```
 
 
 
