--- a/题解.md
+++ b/题解.md
@@ -2,6 +2,8 @@
 
 
 
+
+
 ## 一. 数学题/递归
 
 6 Z字形变换
@@ -75,6 +77,8 @@
 1576 替换所有的问号
 
 LCP18 早餐组合 
+
+47 全排列II
 
 ## 二. 树/链表
 
@@ -7495,7 +7499,7 @@ class Solution {
 方法一：确定每个位置上的数字应该是多少，利用递归，分解子问题。这里注意需要知道y可以分解成多少个x加上一个数b，其中b不为0。
 
 `k = (y - 1) / x`, `b = (y - 1) % x + 1`;
- 
+
 时间复杂度：O(n^2)
 
 空间复杂度：O(n)
@@ -8246,5 +8250,44 @@ class Solution {
 
 ```
 
+### 47 全排列II
 
+方法一：回溯。如果给定的`nums`是无重复的数组，那么我们可以用一个`isVisited`数组来记录每个位置是否被访问过。但是问题给定的数组是有重复的，所以按照上述进行的会得到重复的排列。对于这个问题，我们可以先将数组排序，让重复的数字都放在一起，那么在同一个for循环内如果当前数字和上一个数字一样，而且前一个数字没有被visit过,那么我们就跳过。
+
+时间复杂度：O(n * n!)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    List<List<Integer>> ans = new LinkedList<>();
+    List<Integer> curr = new LinkedList<>();
+    int n;
+    public List<List<Integer>> permuteUnique(int[] nums) {
+        Arrays.sort(nums);
+        n = nums.length;
+        int[] isVisited = new int[n];
+        backTrack(nums, 0, isVisited);
+        return ans;
+    }
+    public void backTrack(int[] nums, int i, int[] isVisited) {
+        if (i == n) {
+            ans.add(new LinkedList<>(curr));
+            return;
+        }
+        for (int k = 0; k < nums.length; k++) {
+            if (isVisited[k] == 0) {
+                if (k > 0 && nums[k] == nums[k-1] && isVisited[k-1] == 0) continue;
+                curr.add(nums[k]);
+                isVisited[k] = 1;
+                backTrack(nums, i+1, isVisited);
+                curr.remove(curr.size()-1);
+                isVisited[k] = 0;
+            }
+        }
+
+    }
+}       
+
+```
 
